--- a/index.html
+++ b/index.html
@@ -5,9 +5,22 @@
 <title>Vlad's Class Website</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0" />
 <link rel="icon" href="#" />
+	
 </head>
 	<h1>Vlad's Class Website &#x1F3CE</h1>
+	<br>
+	<a href="about.html">About</a>
+	<br>
 	
+	<h3>Exercises</h3>
+		<a href="exercise1/index.html">Exercise 1. HTML</a><br>
+		<a href="exercise2/index.html">Exercise 2. CSS Basics</a><br>
+		Exercise 3. CSS Layout & Positioning<br>
+		Exercise 4. CSS Transitions & Animations<br>
+		Exercise 5. CSS Responsive<br>
+		Exercise 6. JavaScript & jQuery<br>
+	
+	<h3>Final Project</h3>
 <body>
 </body>
 </html>
