--- a/exercise2/restaurant-style3.html
+++ b/exercise2/restaurant-style3.html
@@ -12,7 +12,8 @@
 		
 		#container {
 		  max-width: 750px;
-		 margin: 12em auto 12em;
+		  margin: 12em auto 6em;
+		  left: 12em;
 		}
 		
 		#sections {
