--- a/about.html
+++ b/about.html
@@ -8,13 +8,13 @@
     <br>
 	<h4>Facts:</h4>
   	<ol>
-    	<li> I race cars and go-karts competitively
-    	<li> I am a product designer, an HCI researcher and an entrepreneur
-    	<li> My current project is an AI-aided productivity platform
+    	<li> I race cars and go-karts competitively</li>
+    	<li> I am a product designer, an HCI researcher and an entrepreneur</li>
+    	<li> My current project is an AI-aided productivity platform</li>
   	</ol>
 	<br>
 	
-	<img src="assets/cover.jpg" width="480px">
+	<img src="assets/cover.jpg" alt="red and blue abstract image" width="480px">
 	<br><br>
 
 
