--- a/exercise1/index.html
+++ b/exercise1/index.html
@@ -3,13 +3,45 @@
 <head>
 <meta charset="utf-8">
 <title>Exercise 1. HTML</title>
+<meta name="viewport" content="width=device-width,initial-scale=1.0" />
+<link rel="icon" href="#" />
+	<link rel="stylesheet" href="../styles.css">
+	
+	
 </head>
- <h1>Exercise 1. HTML</h1>
+
+<body>
+<div class="grid-container"> 	
+	<div class="header">
+	<h1 style="display: inline">Interactive Design</h1><br>
+	<h1 style="display: inline">Vlad Vykhodets</h1>
+	<br>
+	</div>
+	
+	<div class="menu">
+		<p><a href="../index.html">Home</a><br></p>
+		<p><a href="../exercise1/index.html">Exercise 1. HTML</a><br></p>
+		<p><a href="../exercise2/index.html">Exercise 2. CSS Basics</a><br></p>
+		<p><a href="../exercise3/index.html">Exercise 3. CSS Layout & Positioning</a><br></p>
+		<p style="color:#9D9D9D;">Exercise 4. CSS Transitions & Animations<br></p>
+		<p style="color:#9D9D9D;">Exercise 5. CSS Responsive<br></p>
+		<p style="color:#9D9D9D;">Exercise 6. JavaScript & jQuery<br></p>
+		<p style="color:#9D9D9D;">Final Project<br></p>
+	
+	</div>	
+	
+	<div class="main">
+		
+<h1>Exercise 1. HTML</h1>
     <ul>
-      <li><a href="restaurant.html">restaurant</a>
-      <li><a href="writing.html">writing</a>
+      <li><a href="restaurant.html">restaurant</a></li>
+      <li><a href="writing.html">writing</a></li>
     </ul>
     <a href="../index.html">Back</a>
-<body>
+	</div>
+</div>
+
 </body>
 </html>
+
+
