--- a/exercise2/index.html
+++ b/exercise2/index.html
@@ -2,24 +2,43 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Exercise 2. CSS Basics</title>
+<meta name="viewport" content="width=device-width,initial-scale=1.0" />
+<link rel="icon" href="#" />
+	<link rel="stylesheet" href="../styles.css">
+	
+	
 </head>
- <h1>Exercise 1. HTML</h1>
- <h2>Restaurant</h2>
-	<ul>
-      <li><a href="restaurant-style1.html">Style 1</a>
-	  <li><a href="restaurant-style2.html">Style 2</a>
-	  <li><a href="restaurant-style3.html">Style 3</a>
-    </ul>
-	<br>
 
- <h2>Writing</h2>
-	<ul>
-      <li><a href="writing-style1.html">Style 1</a>
-	  <li><a href="writing-style2.html">Style 2</a>
-	  <li><a href="writing-style3-p1.html">Style 3</a>
-    </ul>
-    <a href="../index.html">Back</a>
 <body>
+<div class="grid-container"> 	
+	<div class="header">
+	<h1 style="display: inline">Interactive Design</h1><br>
+	<h1 style="display: inline">Vlad Vykhodets</h1>
+	<br>
+	</div>
+	
+	<div class="menu">
+		<p><a href="../index.html">Home</a><br></p>
+		<p><a href="../exercise1/index.html">Exercise 1. HTML</a><br></p>
+		<p><a href="../exercise2/index.html">Exercise 2. CSS Basics</a><br></p>
+		<p><a href="../exercise3/index.html">Exercise 3. CSS Layout & Positioning</a><br></p>
+		<p style="color:#9D9D9D;">Exercise 4. CSS Transitions & Animations<br></p>
+		<p style="color:#9D9D9D;">Exercise 5. CSS Responsive<br></p>
+		<p style="color:#9D9D9D;">Exercise 6. JavaScript & jQuery<br></p>
+		<p style="color:#9D9D9D;">Final Project<br></p>
+	
+	</div>	
+	
+	<div class="main">
+		<h3>Writing</h3>
+			<ul>
+			  <li><a href="writing-style1.html">Style 1</a></li>
+			  <li><a href="writing-style2.html">Style 2</a></li>
+			  <li><a href="writing-style3-p1.html">Style 3</a></li>
+			</ul>
+			<a href="../index.html">Back</a>
+	</div>
+</div>
+
 </body>
 </html>
