--- a/exercise3/index.html
+++ b/exercise3/index.html
@@ -2,13 +2,15 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Vlad's Class Website</title>
+<title>Exercise 1. HTML</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0" />
 <link rel="icon" href="#" />
-	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="../styles.css">
 	
 	
 </head>
+
+<body>
 <div class="grid-container"> 	
 	<div class="header">
 	<h1 style="display: inline">Interactive Design</h1><br>
@@ -17,9 +19,9 @@
 	</div>
 	
 	<div class="menu">
-		<p><a href="index.html">Home</a><br></p>
-		<p><a href="exercise1/index.html">Exercise 1. HTML</a><br></p>
-		<p><a href="exercise2/index.html">Exercise 2. CSS Basics</a><br></p>
+		<p><a href="../index.html">Home</a><br></p>
+		<p><a href="../exercise1/index.html">Exercise 1. HTML</a><br></p>
+		<p><a href="../exercise2/index.html">Exercise 2. CSS Basics</a><br></p>
 		<p><a href="../exercise3/index.html">Exercise 3. CSS Layout & Positioning</a><br></p>
 		<p style="color:#9D9D9D;">Exercise 4. CSS Transitions & Animations<br></p>
 		<p style="color:#9D9D9D;">Exercise 5. CSS Responsive<br></p>
@@ -29,20 +31,17 @@
 	</div>	
 	
 	<div class="main">
-	<p>
-		I am a product designer, an HCI researcher and an entrepreneur. <br>
-		My current project is an AI-driven graphic design platform. <br>
-		I race cars and go-karts competitively<br><br>
-
-
-		Check out my portfolio: 
-	</p>
-	
-	<a href="http://view.publitas.com/vladvykh/portfolio2019" rel="noopener noreferrer" target="_blank"><img src="assets/cover.jpg" alt="Portfolio Cover" width="600px"></a>
-	
+		
+<h3>CSS Layout</h3>
+    <ul>
+      <li><a href="writing-proto.html">Writing Responsive</a></li>
+      
+    </ul>
+    <a href="../index.html">Back</a>
 	</div>
-	
 </div>
-<body>
+
 </body>
 </html>
+
+
