--- a/exercise4/index.html
+++ b/exercise4/index.html
@@ -32,10 +32,10 @@
 	
 	<div class="main">
 		
-<h1>Exercise 1. HTML</h1>
+<h3>CSS Transitions & Animations</h3>
     <ul>
-      <li><a href="restaurant.html">restaurant</a></li>
-      <li><a href="writing.html">writing</a></li>
+      <li><a href="organism.html">Organism</a></li>
+      
     </ul>
     <a href="../index.html">Back</a>
 	</div>
