--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<p><a href="exercise2/index.html">Exercise 2. CSS Basics</a><br></p>
 		<p><a href="exercise3/index.html">Exercise 3. CSS Layout & Positioning</a><br></p>
 		<p><a href="exercise4/index.html">Exercise 4. CSS Transitions & Animations</a><br></p>
-		<p style="color:#9D9D9D;">Exercise 5. CSS Responsive<br></p>
+		<p><a href="exercise5/index.html">Exercise 5. CSS Responsive</a><br></p>
 		<p style="color:#9D9D9D;">Exercise 6. JavaScript & jQuery<br></p>
 		<p style="color:#9D9D9D;">Final Project<br></p>
 	
